[gd_scene load_steps=12 format=3 uid="uid://sv4c5jd3v5p3"]

[ext_resource type="Script" uid="uid://8exkp78vn60b" path="res://scripts/death_menu.gd" id="1_vqs20"]
[ext_resource type="Texture2D" uid="uid://c5e8m0cxoqapg" path="res://assets/Game_Over.png" id="2_20fbl"]
[ext_resource type="FontFile" uid="uid://dkxfstws7ia8r" path="res://assets/Xav_button_font-Regular.ttf" id="3_uldby"]
[ext_resource type="Texture2D" uid="uid://w48o4va3uk5d" path="res://assets/button_default.png" id="4_tie44"]
[ext_resource type="AudioStream" uid="uid://bepujcg5bdvdx" path="res://sounds/BGM/Game Over BGM.wav" id="5_20fbl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njm3g"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r04d8"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahu31"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pcua3"]
texture = ExtResource("4_tie44")
texture_margin_left = 30.0
texture_margin_top = 30.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufkwy"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_f85wd"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("3_uldby")
Button/styles/disabled = SubResource("StyleBoxFlat_njm3g")
Button/styles/focus = SubResource("StyleBoxFlat_r04d8")
Button/styles/hover = SubResource("StyleBoxFlat_ahu31")
Button/styles/normal = SubResource("StyleBoxTexture_pcua3")
Button/styles/pressed = SubResource("StyleBoxFlat_ufkwy")

[node name="death_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vqs20")

[node name="LevelCompletedBlank" type="Sprite2D" parent="."]
position = Vector2(641.523, 360.398)
scale = Vector2(0.871223, 0.870281)
texture = ExtResource("2_20fbl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = 53.0
offset_right = 147.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.85, 0.85)
pivot_offset = Vector2(144, 89)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="retry_level" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_f85wd")
theme_override_font_sizes/font_size = 16
text = "retry level"

[node name="menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_f85wd")
theme_override_font_sizes/font_size = 16
text = "back to main menu"

[node name="death_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_20fbl")
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/retry_level" to="." method="_on_retry_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
